--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/portfolio.css">
 </head>
-<body>
+<body class="azeret-mono-normal">
     
     <header>
-
+        <nav>
+            <h3 class="nav-title">Nazmus Saki</h3>
+           <button class="dload-cv">Download Resume</button>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <img src="assets/Group.png" alt="">
+                <h2 class="banner-title">In the near future, I hope to become a Developer</h2>
+                <p class="banner-description">I am a Developer and UI/UX Designer. I have many years of experience in consulting in all areas of Digital. Interested in working together? Let's have a talk.</p>
+                <button class="cntc-me">Contact with me</button>
+            </div>
+        </div>
     </header>
     <main>
 
