added main section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,93 @@
         </div>
     </header>
     <main>
+       <div class="why-div">
+        <section class="why">
+            <h3 class="why-title">Why Web Development</h3>
+            <p class="why-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, voluptas!</p>
+        </section>
+        <section class="why-body">
+            <div class="content">
+                <section class="content-1">
+                    <div class="content-1-div">
+                        <h4 class="content-1-title">I will Do Coding and Change The World</h4>
+                    <p class="content-1-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium.</p>
+                    <button class="btn-more">Learn More</button>
+                    </div>
+                    <img src="assets/Group 3.png" alt="">
+                </section>
 
+                <section class="content-2">
+                    <img src="assets/Group 4.png" alt="">
+                    <div class="content-2-div">
+                        <h4 class="content-1-title">I will help People by creating Modern Web System</h4>
+                    <p class="content-1-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, amet!</p>
+                    <button class="btn-more">Learn More</button>
+                    </div>
+                </section>
+
+                <section class="content-3">
+                    <div>
+                        <h4 class="content-1-title">I will Do Coding and Change The World</h4>
+                    <p class="content-1-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, eos?</p>
+                    <button class="btn-more">Learn More</button>
+                    </div>
+                    <img src="assets/Layer_1.png" alt="">
+                </section>
+            </div>
+        </section>
+       </div>
+       <section class="why">
+        <h3 class="why-title">My Inspiration</h3>
+        <p class="why-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel eos eius quidem aspernatur. Aliquam.</p>
+        </section>
+        <section>
+            <div class="video">
+                <iframe width="1024" height="480" src="https://www.youtube.com/embed/DGHn2uOAVCE"></iframe>
+            </div>
+        </section>
+        <section class="why">
+            <h3 class="why-title">My Current Target</h3>
+            <p class="why-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum dolores quibusdam velit reprehenderit vel id.</p>
+            <div class="skills-container">
+                <div class="skill-1">
+                    <img src="assets/html.png" alt="">
+                    <h4 class="skill-title">HTML</h4>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, eligendi magni est ad quas ratione?</p>
+                    <a class="skill-btn" href="">Learn More</a>
+                </div>
+                <div class="skill-2">
+                    <img src="assets/css.png" alt="">
+                    <h4 class="skill-title">CSS</h4>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut est alias sit quas! Ratione, doloremque.</p>
+                    <a class="skill-btn" href="">Learn More</a>
+                </div>
+                <div class="skill-3">
+                    <img src="assets/js.png" alt="">
+                    <h4 class="skill-title">JavaScript</h4>
+                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur numquam atque unde laboriosam et praesentium.</p>
+                    <a class="skill-btn" href="">Learn More</a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="about">
+                <h3 class="about-title">I need Support</h3>
+                <p class="about-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, expedita.</p>
+            <form action="">
+                <input type="text" name="" id="box" placeholder="Suggest me any feedback for me">
+                <input type="submit" value="Submit" id="submit">
+            </form>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="bg">
+        <h4 class="bg-title">An Open Commitment by Nazmus Saki</h4>
+        <div>
+            <a href=""><img src="assets/facebook.png" alt=""></a>
+            <a href=""><img src="assets/github.png" alt=""></a>
+            <a href=""><img src="assets/linkedin-icon 1.png" alt=""></a>
+        </div>
     </footer>
 
 </body>
