added all the contents of each section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="assets/Group.png" alt="">
                 <h2 class="banner-title">In the near future, I hope to become a Developer</h2>
                 <p class="banner-description">I am a Developer and UI/UX Designer. I have many years of experience in consulting in all areas of Digital. Interested in working together? Let's have a talk.</p>
-                <button class="cntc-me">Contact with me</button>
+                <button class="cntc-me" >Contact with me</button>
             </div>
         </div>
     </header>
@@ -29,14 +29,14 @@
        <div class="why-div">
         <section class="why">
             <h3 class="why-title">Why Web Development</h3>
-            <p class="why-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, voluptas!</p>
+            <p class="why-description">Web development is not just technical—it’s a strategic investment that underpins success in the digital age. Whether you’re an individual or a business, investing in quality web development is essential!</p>
         </section>
         <section class="why-body">
             <div class="content">
                 <section class="content-1">
                     <div class="content-1-div">
-                        <h4 class="content-1-title">I will Do Coding and Change The World</h4>
-                    <p class="content-1-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium.</p>
+                        <h4 class="content-1-title">Online Presence</h4>
+                    <p class="content-1-description">Web development creates an online footprint for businesses, organizations, and individuals.</p>
                     <button class="btn-more">Learn More</button>
                     </div>
                     <img src="assets/Group 3.png" alt="">
@@ -45,16 +45,16 @@
                 <section class="content-2">
                     <img src="assets/Group 4.png" alt="">
                     <div class="content-2-div">
-                        <h4 class="content-1-title">I will help People by creating Modern Web System</h4>
-                    <p class="content-1-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, amet!</p>
+                        <h4 class="content-1-title">User Experience</h4>
+                    <p class="content-1-description">A well-built website provides a user-friendly and engaging experience.</p>
                     <button class="btn-more">Learn More</button>
                     </div>
                 </section>
 
                 <section class="content-3">
                     <div>
-                        <h4 class="content-1-title">I will Do Coding and Change The World</h4>
-                    <p class="content-1-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, eos?</p>
+                        <h4 class="content-1-title">SEO Benefits</h4>
+                    <p class="content-1-description">Proper web development practices contribute to improved search engine optimization (SEO).</p>
                     <button class="btn-more">Learn More</button>
                     </div>
                     <img src="assets/Layer_1.png" alt="">
@@ -64,7 +64,7 @@
        </div>
        <section class="why">
         <h3 class="why-title">My Inspiration</h3>
-        <p class="why-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vel eos eius quidem aspernatur. Aliquam.</p>
+        <p class="why-description">Web development is crucial for various reasons, and its impact extends far beyond just having a website.</p>
         </section>
         <section>
             <div class="video">
@@ -73,24 +73,24 @@
         </section>
         <section class="why">
             <h3 class="why-title">My Current Target</h3>
-            <p class="why-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum dolores quibusdam velit reprehenderit vel id.</p>
+            <p class="why-description">These goals can evolve over time as you gain experience and explore different aspects of web development.</p>
             <div class="skills-container">
                 <div class="skill-1">
                     <img src="assets/html.png" alt="">
                     <h4 class="skill-title">HTML</h4>
-                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, eligendi magni est ad quas ratione?</p>
+                    <p class="skill-description">HyperText Markup Language is the standard markup language for documents designed to be displayed in a web browser.</p>
                     <a class="skill-btn" href="">Learn More</a>
                 </div>
                 <div class="skill-2">
                     <img src="assets/css.png" alt="">
                     <h4 class="skill-title">CSS</h4>
-                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut est alias sit quas! Ratione, doloremque.</p>
+                    <p class="skill-description">Cascading Style Sheets is a style sheet language used for specifying the presentation and styling of a document written in a markup language such as HTML or XML. </p>
                     <a class="skill-btn" href="">Learn More</a>
                 </div>
                 <div class="skill-3">
                     <img src="assets/js.png" alt="">
                     <h4 class="skill-title">JavaScript</h4>
-                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur numquam atque unde laboriosam et praesentium.</p>
+                    <p class="skill-description">JavaScript, often abbreviated as JS, is a programming language and core technology of the Web, alongside HTML and CSS.</p>
                     <a class="skill-btn" href="">Learn More</a>
                 </div>
             </div>
@@ -98,7 +98,7 @@
         <section>
             <div class="about">
                 <h3 class="about-title">I need Support</h3>
-                <p class="about-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, expedita.</p>
+                <p class="about-description">If you have any query let me know & send me your feedback for improve myself, Thank You.</p>
             <form action="">
                 <input type="text" name="" id="box" placeholder="Suggest me any feedback for me">
                 <input type="submit" value="Submit" id="submit">
