added footer section

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
     <footer class="bg">
         <h4 class="bg-title">An Open Commitment by Nazmus Saki</h4>
         <div>
-            <a href=""><img src="assets/facebook.png" alt=""></a>
-            <a href=""><img src="assets/github.png" alt=""></a>
-            <a href=""><img src="assets/linkedin-icon 1.png" alt=""></a>
+            <a href="https://www.facebook.com/nazmus.sakib.ovi"><img src="assets/facebook.png" alt=""></a>
+            <a href="https://github.com/nazmus-saki"><img src="assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/nazmus-saki/"><img src="assets/linkedin-icon 1.png" alt=""></a>
         </div>
     </footer>
 
